compiler/testData/diagnostics/tests/syntheticExtensions/javaProperties/SyntheticJavaPropertyReference.kt
// FILE: KotlinFile.kt

fun bar() = JavaClass::<!UNSUPPORTED!>foo<!>

// FILE: JavaClass.java

public class JavaClass {
    public String getFoo() {}
}
